[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "serializable"
dynamic = ["version"]
description = "Base class with serialization helpers for user-defined Python objects"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Alex Rubinsteyn", email = "alex.rubinsteyn@unc.edu"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "typechecks>=0.0.2",
    "simplejson>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "coveralls",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/openvax/serializable"
Repository = "https://github.com/openvax/serializable"

[tool.setuptools.dynamic]
version = {attr = "serializable.version.__version__"}

[tool.setuptools.packages.find]
include = ["serializable*"]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["serializable", "tests"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".eggs",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip() without explicit strict
    "SIM108", # use ternary operator instead of if-else
    "UP007",  # use X | Y for type unions (need Python 3.10+)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "B006",   # allow mutable defaults in tests (exercises serialization behavior)
    "B011",   # allow assert False
    "C405",   # allow set([...]) literals used in tests
    "C408",   # allow dict(...) calls used in tests
    "RUF012", # allow class-level test data
]
"__init__.py" = ["F401"]  # allow unused imports in __init__.py

[tool.ruff.lint.isort]
known-first-party = ["serializable"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["serializable"]
omit = ["serializable/version.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
